# -recalculation-of-expenses

./: .env.example  .gitignore  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py
app/: main.py
app/api/: dependencies.py  main.py
app/api/routes/: __init__.py  auth.py  expenses.py
app/bot/: loader.py
app/bot/handlers/: __init__.py  commands.py  expenses.py  keyboards.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  base.py  category.py  expense.py  user.py
app/repositories/: base.py  expenses.py  users.py
app/schemas/: __init__.py  expense.py  user.py
app/services/: expense_service.py  report_service.py
tests/: conftest.py
tests/test_api/: test_expenses.py
tests/test_bot/: test_parsing.py
